--- a/giraffehd/index.html
+++ b/giraffehd/index.html
@@ -34,7 +34,7 @@
             <div class="rowDiscContainer">
                 <div class="rowContainer">
                     <video autoplay loop muted playsinline>
-                        <source src="car_3.webm" type="video/webm">
+                        <source src="giraffehd/car_3.webm" type="video/webm">
                     </video>
                     <video autoplay loop muted playsinline>
                         <source src="ffhq_3.webm" type="video/webm">
