--- a/giraffehd/index.html
+++ b/giraffehd/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="index.css">
     <link rel="stylesheet" type="text/css" href="croppie.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GIRAFFEHD Demo</title>
+    <title>GIRAFFEHD</title>
 </head>
 
 <body>
