--- a/giraffehd/index.html
+++ b/giraffehd/index.html
@@ -107,7 +107,7 @@
                         <source src="car_8_2.webm" type="video/webm">
                     </video>
                     <div class="imgTextContainer">
-                        <p class="imgTxt"> Object Depth & Vertical Translation</p>
+                        <p class="imgTxt"> Object Vertical Translation</p>
                     </div>
                 </div>
             </div>
