--- a/giraffehd/index.html
+++ b/giraffehd/index.html
@@ -37,7 +37,7 @@
                         <source src="car_3.webm" type="video/webm">
                     </video>
                     <video autoplay loop muted playsinline>
-                        <source src="ffhq_3.webm" type="video/webm">
+                        <source src="ffhq_3.mp4" type="video/mp4">
                     </video>
                 </div>
                 <div class="imgTextContainer">
@@ -51,7 +51,7 @@
                         <source src="car_1.webm" type="video/webm">
                     </video>
                     <video autoplay loop muted playsinline>
-                        <source src="ffhq_1.webm" type="video/webm">
+                        <source src="ffhq_1.mp4" type="video/mp4">
                     </video>
                 </div>
                 <div class="imgTextContainer">
@@ -65,7 +65,7 @@
                         <source src="car_0.webm" type="video/webm">
                     </video>
                     <video autoplay loop muted playsinline>
-                        <source src="ffhq_0.webm" type="video/webm">
+                        <source src="ffhq_0.mp4" type="video/mp4">
                     </video>
                 </div>
                 <div class="imgTextContainer">
@@ -85,7 +85,7 @@
                 </div>
                 <div class="rowDiscContainer">
                     <video autoplay loop muted playsinline>
-                        <source src="ffhq_9.webm" type="video/webm">
+                        <source src="ffhq_9.mp4" type="video/mp4">
                     </video>
                     <div class="imgTextContainer">
                         <p class="imgTxt">Rotation</p>
