--- a/giraffehd/index.html
+++ b/giraffehd/index.html
@@ -36,7 +36,7 @@
                     <video autoplay loop muted playsinline>
                         <source src="car_3.webm" type="video/webm">
                     </video>
-                    <video autoplay loop muted playsinline>
+                    <video autoplay loop muted playsinline controls>
                         <source src="ffhq_3.mp4" type="video/mp4">
                     </video>
                 </div>
@@ -50,7 +50,7 @@
                     <video autoplay loop muted playsinline>
                         <source src="car_1.webm" type="video/webm">
                     </video>
-                    <video autoplay loop muted playsinline>
+                    <video autoplay loop muted playsinline controls>
                         <source src="ffhq_1.mp4" type="video/mp4">
                     </video>
                 </div>
@@ -64,7 +64,7 @@
                     <video autoplay loop muted playsinline>
                         <source src="car_0.webm" type="video/webm">
                     </video>
-                    <video autoplay loop muted playsinline>
+                    <video autoplay loop muted playsinline controls>
                         <source src="ffhq_0.mp4" type="video/mp4">
                     </video>
                 </div>
@@ -84,7 +84,7 @@
                     </div>
                 </div>
                 <div class="rowDiscContainer">
-                    <video autoplay loop muted playsinline>
+                    <video autoplay loop muted playsinline controls>
                         <source src="ffhq_9.mp4" type="video/mp4">
                     </video>
                     <div class="imgTextContainer">
