--- a/giraffehd/index.html
+++ b/giraffehd/index.html
@@ -33,8 +33,8 @@
 
             <div class="rowDiscContainer">
                 <div class="rowContainer">
-                    <video autoplay loop muted playsinline>
-                        <source src="car_3.webm" type="video/webm">
+                    <video autoplay loop muted playsinline controls>
+                        <source src="car_3.mp4" type="video/mp4">
                     </video>
                     <video autoplay loop muted playsinline controls>
                         <source src="ffhq_3.mp4" type="video/mp4">
@@ -47,8 +47,8 @@
 
             <div class="rowDiscContainer">
                 <div class="rowContainer">
-                    <video autoplay loop muted playsinline>
-                        <source src="car_1.webm" type="video/webm">
+                    <video autoplay loop muted playsinline controls>
+                        <source src="car_1.mp4" type="video/mp4">
                     </video>
                     <video autoplay loop muted playsinline controls>
                         <source src="ffhq_1.mp4" type="video/mp4">
@@ -61,8 +61,8 @@
 
             <div class="rowDiscContainer">
                 <div class="rowContainer">
-                    <video autoplay loop muted playsinline>
-                        <source src="car_0.webm" type="video/webm">
+                    <video autoplay loop muted playsinline controls>
+                        <source src="car_0.mp4" type="video/mp4">
                     </video>
                     <video autoplay loop muted playsinline controls>
                         <source src="ffhq_0.mp4" type="video/mp4">
@@ -76,8 +76,8 @@
 
             <div class="rowContainer">
                 <div class="rowDiscContainer">
-                    <video autoplay loop muted playsinline>
-                        <source src="car_5.webm" type="video/webm">
+                    <video autoplay loop muted playsinline controls>
+                        <source src="car_5.mp4" type="video/mp4">
                     </video>
                     <div class="imgTextContainer">
                         <p class="imgTxt">Camera Elevation</p>
@@ -95,16 +95,16 @@
 
             <div class="rowContainer">
                 <div class="rowDiscContainer">
-                    <video autoplay loop muted playsinline>
-                        <source src="car_8_1.webm" type="video/webm">
+                    <video autoplay loop muted playsinline controls>
+                        <source src="car_8_1.mp4" type="video/mp4">
                     </video>
                     <div class="imgTextContainer">
                         <p class="imgTxt"> Object Depth & Horizontal Translation</p>
                     </div>
                 </div>
                 <div class="rowDiscContainer">
-                    <video autoplay loop muted playsinline>
-                        <source src="car_8_2.webm" type="video/webm">
+                    <video autoplay loop muted playsinline controls>
+                        <source src="car_8_2.mp4" type="video/mp4">
                     </video>
                     <div class="imgTextContainer">
                         <p class="imgTxt"> Object Vertical Translation</p>
