--- a/giraffehd/index.html
+++ b/giraffehd/index.html
@@ -16,7 +16,7 @@
         </div>
         <h2>Abstract</h2>
         <div class="textContainer">
-            <p id="disc_txt">
+            <p id="abstractText">
                 3D-aware generative models have shown that the introduction of 3D information can lead to more controllable image generation.
                  In particular, the current state-of-the-art model GIRAFFE can control each object's rotation, translation, scale, and scene
                  camera pose without corresponding supervision. However, GIRAFFE only operates well when the image resolution is low.
