--- a/giraffehd/index.html
+++ b/giraffehd/index.html
@@ -40,8 +40,10 @@
                         <source src="ffhq_3.mp4" type="video/mp4">
                     </video>
                 </div>
-                <div class="imgTextContainer">
-                    <p class="imgTxt">Background</p>
+                <div class="rowContainer">
+                    <div class="imgTextContainer">
+                        <p class="imgTxt">Background: appearance of the foreground adapts to the changing background.</p>
+                    </div>
                 </div>
             </div>
 
@@ -54,8 +56,10 @@
                         <source src="ffhq_1.mp4" type="video/mp4">
                     </video>
                 </div>
-                <div class="imgTextContainer">
-                    <p class="imgTxt">Object Appearance</p>
+                <div class="rowContainer">
+                    <div class="imgTextContainer">
+                        <p class="imgTxt">Object Appearance</p>
+                    </div>
                 </div>
             </div>
 
@@ -68,52 +72,73 @@
                         <source src="ffhq_0.mp4" type="video/mp4">
                     </video>
                 </div>
-                <div class="imgTextContainer">
-                    <p class="imgTxt">Object Shape</p>
+                <div class="rowContainer">
+                    <div class="imgTextContainer">
+                        <p class="imgTxt">Object Shape</p>
+                    </div>
                 </div>
             </div>
 
-
-            <div class="rowContainer">
-                <div class="rowDiscContainer">
+            <div class="rowDiscContainer">
+                <div class="rowContainer">
                     <video autoplay loop muted playsinline controls>
                         <source src="car_5.mp4" type="video/mp4">
                     </video>
-                    <div class="imgTextContainer">
-                        <p class="imgTxt">Camera Elevation</p>
-                    </div>
-                </div>
-                <div class="rowDiscContainer">
                     <video autoplay loop muted playsinline controls>
                         <source src="ffhq_9.mp4" type="video/mp4">
                     </video>
+                </div>
+                <div class="rowContainer">
+                    <div class="imgTextContainer">
+                        <p class="imgTxt">Camera Elevation</p>
+                    </div>
+
                     <div class="imgTextContainer">
                         <p class="imgTxt">Rotation</p>
                     </div>
                 </div>
             </div>
 
-            <div class="rowContainer">
-                <div class="rowDiscContainer">
+            <div class="rowDiscContainer">
+                <div class="rowContainer">
                     <video autoplay loop muted playsinline controls>
                         <source src="car_8_1.mp4" type="video/mp4">
                     </video>
-                    <div class="imgTextContainer">
-                        <p class="imgTxt"> Object Depth & Horizontal Translation</p>
-                    </div>
-                </div>
-                <div class="rowDiscContainer">
                     <video autoplay loop muted playsinline controls>
                         <source src="car_8_2.mp4" type="video/mp4">
                     </video>
+                </div>
+                <div class="rowContainer">
                     <div class="imgTextContainer">
-                        <p class="imgTxt"> Object Vertical Translation</p>
+                        <p class="imgTxt">Camera Elevation</p>
+                    </div>
+
+                    <div class="imgTextContainer">
+                        <p class="imgTxt">Rotation</p>
                     </div>
                 </div>
             </div>
 
-        </div>
+            <div class="rowDiscContainer">
+                <div class="rowContainer">
+                    <video autoplay loop muted playsinline controls>
+                        <source src="car_8_1.mp4" type="video/mp4">
+                    </video>
+                    <video autoplay loop muted playsinline controls>
+                        <source src="car_8_2.mp4" type="video/mp4">
+                    </video>
+                </div>
+                <div class="rowContainer">
+                    <div class="imgTextContainer">
+                        <p class="imgTxt">Object Depth & Horizontal Translation</p>
+                    </div>
 
+                    <div class="imgTextContainer">
+                        <p class="imgTxt">Object Vertical Translation: ground moves up with the car to ensure geometric compatibility</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
 </body>
