--- a/giraffehd/index.html
+++ b/giraffehd/index.html
@@ -42,7 +42,7 @@
                 </div>
                 <div class="rowContainer">
                     <div class="imgTextContainer">
-                        <p class="imgTxt">Background: appearance of the foreground adapts to the changing background.</p>
+                        <p class="imgTxt">Background</p>
                     </div>
                 </div>
             </div>
@@ -110,31 +110,11 @@
                 </div>
                 <div class="rowContainer">
                     <div class="imgTextContainer">
-                        <p class="imgTxt">Camera Elevation</p>
-                    </div>
-
-                    <div class="imgTextContainer">
-                        <p class="imgTxt">Rotation</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="rowDiscContainer">
-                <div class="rowContainer">
-                    <video autoplay loop muted playsinline controls>
-                        <source src="car_8_1.mp4" type="video/mp4">
-                    </video>
-                    <video autoplay loop muted playsinline controls>
-                        <source src="car_8_2.mp4" type="video/mp4">
-                    </video>
-                </div>
-                <div class="rowContainer">
-                    <div class="imgTextContainer">
                         <p class="imgTxt">Object Depth & Horizontal Translation</p>
                     </div>
 
                     <div class="imgTextContainer">
-                        <p class="imgTxt">Object Vertical Translation: ground moves up with the car to ensure geometric compatibility</p>
+                        <p class="imgTxt">Object Vertical Translation</p>
                     </div>
                 </div>
             </div>
