--- a/giraffehd/index.html
+++ b/giraffehd/index.html
@@ -37,10 +37,10 @@
         <div id="imgContainer">
             <div class="rowDiscContainer">
                 <div class="rowContainer">
-                    <video autoplay loop muted playsinline controls>
+                    <video autoplay loop playsinline controls>
                         <source src="car_3.mp4" type="video/mp4">
                     </video>
-                    <video autoplay loop muted playsinline controls>
+                    <video autoplay loop playsinline controls>
                         <source src="ffhq_3.mp4" type="video/mp4">
                     </video>
                 </div>
@@ -53,10 +53,10 @@
 
             <div class="rowDiscContainer">
                 <div class="rowContainer">
-                    <video autoplay loop muted playsinline controls>
+                    <video autoplay loop playsinline controls>
                         <source src="car_1.mp4" type="video/mp4">
                     </video>
-                    <video autoplay loop muted playsinline controls>
+                    <video autoplay loop playsinline controls>
                         <source src="ffhq_1.mp4" type="video/mp4">
                     </video>
                 </div>
@@ -69,10 +69,10 @@
 
             <div class="rowDiscContainer">
                 <div class="rowContainer">
-                    <video autoplay loop muted playsinline controls>
+                    <video autoplay loop playsinline controls>
                         <source src="car_0.mp4" type="video/mp4">
                     </video>
-                    <video autoplay loop muted playsinline controls>
+                    <video autoplay loop playsinline controls>
                         <source src="ffhq_0.mp4" type="video/mp4">
                     </video>
                 </div>
@@ -85,10 +85,10 @@
 
             <div class="rowDiscContainer">
                 <div class="rowContainer">
-                    <video autoplay loop muted playsinline controls>
+                    <video autoplay loop playsinline controls>
                         <source src="car_5.mp4" type="video/mp4">
                     </video>
-                    <video autoplay loop muted playsinline controls>
+                    <video autoplay loop playsinline controls>
                         <source src="ffhq_9.mp4" type="video/mp4">
                     </video>
                 </div>
@@ -105,10 +105,10 @@
 
             <div class="rowDiscContainer">
                 <div class="rowContainer">
-                    <video autoplay loop muted playsinline controls>
+                    <video autoplay loop playsinline controls>
                         <source src="car_8_1.mp4" type="video/mp4">
                     </video>
-                    <video autoplay loop muted playsinline controls>
+                    <video autoplay loop playsinline controls>
                         <source src="car_8_2.mp4" type="video/mp4">
                     </video>
                 </div>
