--- a/giraffehd/index.html
+++ b/giraffehd/index.html
@@ -13,6 +13,15 @@
     <div class="masterContainer">
         <div class="titleContainer">
             <h1 class="title">GIRAFFE HD: A High-Resolution 3D-aware Generative Model</h1>
+            <table>
+                <tr>
+                    <td>Yang Xue</td>
+                    <td>Yuheng Li</td>
+                    <td>Krishna Kumar</td>
+                    <td>Yong Jae Lee</td>
+                </tr>
+            </table>
+            <img id="concept" src="concept.jpeg">
         </div>
         <h2>Abstract</h2>
         <!-- <div class="textContainer"> -->
