--- a/giraffehd/index.html
+++ b/giraffehd/index.html
@@ -35,6 +35,8 @@
                 consistency constraints to stitch them together to composite a coherent final image. We demonstrate state-of-the-art 3D
                 controllable high-resolution image generation on multiple natural image datasets.
         </p>
+        <h2>Architecture</h2>
+        <img id="arch" src="architecture4.jpeg">
         <!-- </div> -->
 
         <h2>Controllable Scene Generation</h2>
@@ -128,6 +130,25 @@
 
                     <div class="imgTextContainer">
                         <p class="imgTxt">Object Vertical Translation</p>
+                    </div>
+                </div>
+
+            <div class="rowDiscContainer">
+                <div class="rowContainer">
+                    <video autoplay loop muted playsinline controls>
+                        <source src="car_7.mp4" type="video/mp4">
+                    </video>
+                    <video autoplay loop muted playsinline controls>
+                        <source src="car_multi.mp4" type="video/mp4">
+                    </video>
+                </div>
+                <div class="rowContainer">
+                    <div class="imgTextContainer">
+                        <p class="imgTxt">Scale</p>
+                    </div>
+
+                    <div class="imgTextContainer">
+                        <p class="imgTxt">Multiple objects</p>
                     </div>
                 </div>
             </div>
