--- a/giraffehd/index.html
+++ b/giraffehd/index.html
@@ -132,6 +132,8 @@
                         <p class="imgTxt">Object Vertical Translation</p>
                     </div>
                 </div>
+            </div>
+
 
             <div class="rowDiscContainer">
                 <div class="rowContainer">
