--- a/giraffehd/index.html
+++ b/giraffehd/index.html
@@ -155,6 +155,16 @@
                 </div>
             </div>
         </div>
+
+        <h2>Citation</h2>
+        <pre>
+            @inproceedings{xue2022giraffehd,
+            author    = {Yang Xue and Yuheng Li and Krishna Kumar and Yong Jae Lee},
+            title     = {GIRAFFE HD: A High-Resolution 3D-aware Generative Model},
+            booktitle   = {CVPR},
+            year      = {2022},
+            }
+        </pre>
     </div>
 
 </body>
