--- a/giraffehd/index.html
+++ b/giraffehd/index.html
@@ -80,7 +80,7 @@
             <div class="rowDiscContainer">
                 <div class="rowContainer">
                     <video autoplay loop muted playsinline controls>
-                        <source src="car_0.mp4" type="video/mp4">
+                        <source src="_car_0.mp4" type="video/mp4">
                     </video>
                     <video autoplay loop muted playsinline controls>
                         <source src="ffhq_0.mp4" type="video/mp4">
