--- a/giraffehd/index.html
+++ b/giraffehd/index.html
@@ -16,7 +16,7 @@
                 <tr>
                     <td>Yang Xue</td>
                     <td>Yuheng Li</td>
-                    <td>Krishna Kumar</td>
+                    <td>Krishna Kumar Singh</td>
                     <td>Yong Jae Lee</td>
                 </tr>
             </table>
