--- a/giraffehd/index.html
+++ b/giraffehd/index.html
@@ -20,6 +20,12 @@
                     <td>Yong Jae Lee</td>
                 </tr>
             </table>
+            <table id="paper">
+                <tr>
+                    <td><a href="https://arxiv.org/abs/2203.14954">paper</a></td>
+                    <td>code</td>
+                </tr>
+            </table>
             <img id="concept" src="concept.jpeg">
         </div>
         <h2>Abstract</h2>
@@ -78,7 +84,7 @@
                     </div>
                 </div>
             </div>
-            
+
             <div class="rowDiscContainer">
                 <div class="rowContainer">
                     <video autoplay loop muted playsinline controls>
