--- a/giraffehd/index.html
+++ b/giraffehd/index.html
@@ -47,119 +47,43 @@
         <h2>Controllable Scene Generation</h2>
         <p id="discText">
             GIRAFFE HD preserves all of GIRAFFE's 3D controllable features while generating images at significantly higher quality and resolution.
-            Importantly, compared to GIRAFFE, our background remains more consistent when the foreground changes. Below we show samples of CompCar
-            <math>512<sup>2</sup></math> and FFHQ <math>1024<sup>2</sup></math>.
+            Importantly, compared to GIRAFFE, our background remains more consistent when the foreground changes. Below we show samples of AFHQ Cat
+            <math>256<sup>2</sup></math>, CompCar <math>512<sup>2</sup></math> and FFHQ <math>1024<sup>2</sup></math>.
         </p>
         <div id="imgContainer">
-
-
             <div class="rowDiscContainer">
-                <div class="rowContainer">
-                    <video autoplay loop muted playsinline controls>
-                        <source src="car_1.mp4" type="video/mp4">
-                    </video>
-                    <video autoplay loop muted playsinline controls>
-                        <source src="ffhq_1.mp4" type="video/mp4">
-                    </video>
-                </div>
-                <div class="rowContainer">
-                    <div class="imgTextContainer">
-                        <p class="imgTxt">Object Appearance</p>
-                    </div>
-                </div>
+                <img class="rowImg" src="1.png">
+                <p class="imgTxt">Object Appearance</p>
             </div>
 
             <div class="rowDiscContainer">
-                <div class="rowContainer">
-                    <video autoplay loop muted playsinline controls>
-                        <source src="car_3.mp4" type="video/mp4">
-                    </video>
-                    <video autoplay loop muted playsinline controls>
-                        <source src="ffhq_3.mp4" type="video/mp4">
-                    </video>
-                </div>
-                <div class="rowContainer">
-                    <div class="imgTextContainer">
-                        <p class="imgTxt">Background</p>
-                    </div>
-                </div>
+                <img class="rowImg" src="3.png">
+                <p class="imgTxt">Background</p>
             </div>
 
             <div class="rowDiscContainer">
-                <div class="rowContainer">
-                    <video autoplay loop muted playsinline controls>
-                        <source src="tt.mp4" type="video/mp4">
-                    </video>
-                    <video autoplay loop muted playsinline controls>
-                        <source src="ffhq_0.mp4" type="video/mp4">
-                    </video>
-                </div>
-                <div class="rowContainer">
-                    <div class="imgTextContainer">
-                        <p class="imgTxt">Object Shape</p>
-                    </div>
-                </div>
+                <img class="rowImg" src="0.png">
+                <p class="imgTxt">Object Shape</p>
             </div>
 
             <div class="rowDiscContainer">
-                <div class="rowContainer">
-                    <video autoplay loop muted playsinline controls>
-                        <source src="car_5.mp4" type="video/mp4">
-                    </video>
-                    <video autoplay loop muted playsinline controls>
-                        <source src="ffhq_9.mp4" type="video/mp4">
-                    </video>
-                </div>
-                <div class="rowContainer">
-                    <div class="imgTextContainer">
-                        <p class="imgTxt">Camera Elevation</p>
-                    </div>
-
-                    <div class="imgTextContainer">
-                        <p class="imgTxt">Rotation</p>
-                    </div>
-                </div>
+                <img class="rowImg" src="5.png">
+                <p class="imgTxt">Camera Elevation</p>
             </div>
 
             <div class="rowDiscContainer">
-                <div class="rowContainer">
-                    <video autoplay loop muted playsinline controls>
-                        <source src="car_8_1.mp4" type="video/mp4">
-                    </video>
-                    <video autoplay loop muted playsinline controls>
-                        <source src="car_8_2.mp4" type="video/mp4">
-                    </video>
-                </div>
-                <div class="rowContainer">
-                    <div class="imgTextContainer">
-                        <p class="imgTxt">Object Depth & Horizontal Translation</p>
-                    </div>
-
-                    <div class="imgTextContainer">
-                        <p class="imgTxt">Object Vertical Translation</p>
-                    </div>
-                </div>
+                <img class="rowImg" src="7.png">
+                <p class="imgTxt">Scaling</p>
             </div>
 
+            <div class="rowDiscContainer">
+                <img class="rowImg" src="multi.png">
+                <p class="imgTxt">Multiple objects</p>
+            </div>
 
             <div class="rowDiscContainer">
-                <div class="rowContainer">
-                    <video autoplay loop muted playsinline controls>
-                        <source src="car_7.mp4" type="video/mp4">
-                    </video>
-                    <video autoplay loop muted playsinline controls>
-                        <source src="car_multi.mp4" type="video/mp4">
-                    </video>
-                </div>
-                <div class="rowContainer">
-                    <div class="imgTextContainer">
-                        <p class="imgTxt">Scale</p>
-                    </div>
-
-                    <div class="imgTextContainer">
-                        <p class="imgTxt">Multiple objects</p>
-                    </div>
-                </div>
+                <img class="rowImg" src="9.png">
+                <p class="imgTxt">Rotation</p>
             </div>
         </div>
 
