--- a/giraffehd/index.html
+++ b/giraffehd/index.html
@@ -14,10 +14,17 @@
             <h1 class="title">GIRAFFE HD: A High-Resolution 3D-aware Generative Model</h1>
             <table>
                 <tr>
-                    <td>Yang Xue</td>
-                    <td>Yuheng Li</td>
-                    <td>Krishna Kumar Singh</td>
-                    <td>Yong Jae Lee</td>
+                    <td>Yang Xue<math><sup>1</sup></math></td>
+                    <td>Yuheng Li<math><sup>2</sup></math></td>
+                    <td>Krishna Kumar Singh<math><sup>3</sup></math></td>
+                    <td>Yong Jae Lee<math><sup>2</sup></math></td>
+                </tr>
+            </table>
+            <table id="affili">
+                <tr>
+                    <td><math><sup>1</sup></math>UC Davis</td>
+                    <td><math><sup>2</sup></math>UW–Madison</td>
+                    <td><math><sup>3</sup></math>Adobe Research</td>
                 </tr>
             </table>
             <table id="paper">
@@ -41,7 +48,7 @@
                 controllable high-resolution image generation on multiple natural image datasets.
         </p>
         <h2>Architecture</h2>
-        <img id="arch" src="architecture4.jpeg">
+        <img id="arch" src="architecture3.png">
         <!-- </div> -->
 
         <h2>Controllable Scene Generation</h2>
@@ -90,7 +97,7 @@
         <h2>Citation</h2>
         <pre>
             @inproceedings{xue2022giraffehd,
-            author    = {Yang Xue and Yuheng Li and Krishna Kumar and Yong Jae Lee},
+            author    = {Yang Xue and Yuheng Li and Krishna Kumar Singh and Yong Jae Lee},
             title     = {GIRAFFE HD: A High-Resolution 3D-aware Generative Model},
             booktitle   = {CVPR},
             year      = {2022},
