--- a/giraffehd/index.html
+++ b/giraffehd/index.html
@@ -79,6 +79,11 @@
             </div>
 
             <div class="rowDiscContainer">
+                <img class="rowImg" src="8.png">
+                <p class="imgTxt">Translation</p>
+            </div>
+
+            <div class="rowDiscContainer">
                 <img class="rowImg" src="7.png">
                 <p class="imgTxt">Scaling</p>
             </div>
