--- a/giraffehd/index.html
+++ b/giraffehd/index.html
@@ -30,7 +30,7 @@
             <table id="paper">
                 <tr>
                     <td><a href="https://arxiv.org/abs/2203.14954">paper</a></td>
-                    <td>code</td>
+                    <td><a href="https://github.com/AustinXY/GIRAFFEHD">code</td>
                 </tr>
             </table>
             <img id="concept" src="concept.jpeg">
